Fix ordem do filtro

--- a/AVA_PDS_RodrigoFreitas_MiguelFeliciano.ipynb
+++ b/AVA_PDS_RodrigoFreitas_MiguelFeliciano.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "0257e0f5",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "05c03069",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "20e055a3",
    "metadata": {},
    "outputs": [
@@ -176,14 +176,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ordem do filtro: 60\n",
+      "Quantidade de coeficientes: 60\n",
+      "Ordem do filtro: 59\n",
       "β = 4.533514120981248\n"
      ]
     }
    ],
    "source": [
     "M, beta = kaiserord(A, w_transition / np.pi) # Calcula a ordem e o beta da janela kaiser\n",
-    "print(f'Ordem do filtro: {M}')\n",
+    "print(f'Quantidade de coeficientes: {M}')\n",
+    "print(f'Ordem do filtro: {M - 1}')\n",
     "print(f'β = {beta}')"
    ]
   },
@@ -192,7 +194,7 @@
    "id": "c6d7c8cf",
    "metadata": {},
    "source": [
-    "Para este projeto, a ordem escolhida do filtro será PAR, para que o filtro projetado seja de tipo 1 e não imponha restrições. Isso é essencial para uma etapa futura do trabalho, onde serão feitas transformações do filtro passa-baixas para outros tipos de filtro (e.g. passa-altas). Se outros tipos de filtro fossem utilizados, as restrições existentes para esses tipos poderiam levar a resultados indesejados."
+    "Para este projeto, a ordem escolhida do filtro será ÍMPAR, para que o filtro projetado seja de tipo 1 e não imponha restrições. Isso é essencial para uma etapa futura do trabalho, onde serão feitas transformações do filtro passa-baixas para outros tipos de filtro (e.g. passa-altas). Se outros tipos de filtro fossem utilizados, as restrições existentes para esses tipos poderiam levar a resultados indesejados."
    ]
   },
   {
@@ -205,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "2f62c45f",
    "metadata": {},
    "outputs": [],
@@ -216,7 +218,7 @@
     "3 - Cutoff precisa ser normalizado\n",
     "4 - Por padrão a biblioteca scipy implementa o filtro na forma direta\n",
     "''' \n",
-    "fir_direct = firwin(numtaps=M+1, cutoff=w_cutoff / np.pi, window=('kaiser', beta), pass_zero='lowpass')"
+    "fir_direct = firwin(numtaps=M + 1, cutoff=w_cutoff / np.pi, window=('kaiser', beta), pass_zero='lowpass')"
    ]
   },
   {
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "d491b166",
    "metadata": {},
    "outputs": [],
@@ -399,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "99ced97c",
    "metadata": {},
    "outputs": [
@@ -436,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "e674f5d5",
    "metadata": {},
    "outputs": [],
@@ -447,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "id": "1d5d48f5",
    "metadata": {},
    "outputs": [
@@ -501,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "id": "7011b3a7",
    "metadata": {},
    "outputs": [
@@ -569,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "id": "a6a9647e",
    "metadata": {},
    "outputs": [],
@@ -711,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "id": "09a71169",
    "metadata": {},
    "outputs": [],
@@ -770,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "956f881d",
    "metadata": {},
    "outputs": [],
@@ -830,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "422d989e",
    "metadata": {},
    "outputs": [
@@ -838,7 +840,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rodri\\AppData\\Local\\Temp\\ipykernel_14296\\463262122.py:7: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\rodri\\AppData\\Local\\Temp\\ipykernel_21996\\463262122.py:7: RuntimeWarning: divide by zero encountered in log10\n",
       "  response_dB = 20 * np.log10(abs(response_X_Y))             # Resposta em dB\n"
      ]
     },
@@ -887,7 +889,7 @@
     "plot_magnitude_dB_resume(direct_omegas_norm_list, cascade_omegas_norm_list, direct_responses_list, cascade_responses_list, precision_list)\n",
     "plot_phase_resume(direct_omegas_norm_list, cascade_omegas_norm_list, direct_responses_list, cascade_responses_list, precision_list)\n",
     "plot_error_resume(direct_omegas_norm_list, cascade_omegas_norm_list, direct_responses_list, cascade_responses_list, precision_list)\n",
-    "comparison_graphs(direct_omegas_norm_list, cascade_omegas_norm_list, direct_responses_list, cascade_responses_list, precision_list)\n"
+    "comparison_graphs(direct_omegas_norm_list, cascade_omegas_norm_list, direct_responses_list, cascade_responses_list, precision_list)"
    ]
   },
   {
@@ -922,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "id": "2ceac275",
    "metadata": {},
    "outputs": [],
@@ -1029,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "id": "88afc12a",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "id": "09c6fd12",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "id": "9ba706b0",
    "metadata": {},
    "outputs": [
